--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
     "name": "game",
     "version": "0.1.0",
-    "private": true,
     "description": "",
-    "main": "./src/index.js",
+    "main": "src/index.js",
     "author": "azbang",
     "scripts": {
         "start": "gulp"
@@ -21,7 +20,8 @@
     },
     "dependencies": {
         "cordova-android": "^6.2.3",
-        "cordova-plugin-whitelist": "^1.3.2"
+        "cordova-plugin-whitelist": "^1.3.2",
+        "process-nextick-args": "^1.0.7"
     },
     "cordova": {
         "plugins": {
