--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "cordova-android": "^6.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
         "pixi-sound": "^2.0.0",
+        "pixi-tween": "^0.2.0",
         "process-nextick-args": "^1.0.7"
     },
     "cordova": {
