--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
         "cordova-android": "^6.2.3",
         "cordova-plugin-whitelist": "^1.3.2",
+        "pixi-projection": "^0.1.8",
         "pixi-sound": "^2.0.0",
         "pixi-tween": "^0.2.0",
         "process-nextick-args": "^1.0.7"
