--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "gulp"
     },
     "devDependencies": {
+        "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
         "gulp": "~3.9.1",
         "gulp-babel": "^6.1.2",
