--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-    "name": "game",
-    "version": "0.1.0",
-    "description": "",
-    "main": "src/index.js",
+    "name": "mottion",
     "author": "azbang",
-    "scripts": {
-        "start": "gulp"
-    },
     "devDependencies": {
+        "babel-core": "^6.26.0",
         "babel-plugin-transform-object-rest-spread": "^6.26.0",
         "babel-preset-es2015": "^6.24.1",
+        "babelify": "^8.0.0",
+        "browserify": "^14.5.0",
+        "browserify-shader": "^0.1.2",
         "gulp": "~3.9.1",
-        "gulp-babel": "^6.1.2",
-        "gulp-browserify": "https://github.com/deepak1556/gulp-browserify/tarball/master",
         "gulp-connect": "^5.0.0",
         "gulp-if": "^2.0.2",
-        "gulp-notify": "^2.2.0",
-        "gulp-plumber": "^1.1.0",
-        "gulp-uglify": "^2.1.2"
+        "gulp-uglify": "^2.1.2",
+        "node-notifier": "^5.1.2",
+        "vinyl-source-stream": "^2.0.0"
     },
     "dependencies": {
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-whitelist": "^1.3.2",
         "pixi-filters": "^2.4.0",
         "pixi-projection": "^0.1.8",
         "pixi-sound": "^2.0.0",
-        "pixi-tween": "^0.2.0",
-        "process-nextick-args": "^1.0.7"
+        "pixi-tween": "^0.2.0"
     }
 }
