--- a/package.json
+++ b/package.json
@@ -1,25 +1,28 @@
 {
-    "name": "mottion",
-    "author": "azbang",
-    "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-plugin-transform-object-rest-spread": "^6.26.0",
-        "babel-preset-es2015": "^6.24.1",
-        "babelify": "^8.0.0",
-        "browserify": "^14.5.0",
-        "browserify-shader": "^0.1.2",
-        "gulp": "~3.9.1",
-        "gulp-connect": "^5.0.0",
-        "gulp-if": "^2.0.2",
-        "gulp-uglify": "^2.1.2",
-        "node-notifier": "^5.1.2",
-        "vinyl-source-stream": "^2.0.0"
-    },
-    "dependencies": {
-        "pixi-filters": "^2.4.0",
-        "pixi-particles": "^2.1.9",
-        "pixi-projection": "^0.1.8",
-        "pixi-sound": "^2.0.0",
-        "pixi-tween": "^0.2.0"
-    }
+  "name": "mottion",
+  "author": "azbang",
+  "devDependencies": {
+    "electron-packager": "^8.7.2",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^8.0.0",
+    "browserify": "^14.5.0",
+    "browserify-shader": "^0.1.2",
+    "gulp": "~3.9.1",
+    "gulp-connect": "^5.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-uglify": "^2.1.2",
+    "node-notifier": "^5.1.2",
+    "vinyl-source-stream": "^2.0.0"
+  },
+  "dependencies": {
+    "electron": "^1.7.5",
+    "pixi-filters": "^2.4.0",
+    "pixi-particles": "^2.1.9",
+    "pixi-projection": "^0.1.8",
+    "pixi-sound": "^2.0.0",
+    "pixi-tween": "^0.2.0",
+    "webfontloader": "^1.6.28"
+  }
 }
