--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "mottion",
   "author": "azbang",
+  "scripts": {
+    "dev": "gulp",
+    "electron": "electron . && gulp",
+    "build": "DEV='production' gulp"
+  },
   "devDependencies": {
     "electron-packager": "^8.7.2",
     "babel-core": "^6.26.0",
