--- a/package.json
+++ b/package.json
@@ -7,19 +7,16 @@
     "build": "DEV='production' gulp"
   },
   "devDependencies": {
-    "electron-packager": "^8.7.2",
-    "babel-core": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
     "babelify": "^8.0.0",
-    "browserify": "^14.5.0",
+    "browserify": "^16.0.0",
     "browserify-shader": "^0.1.2",
-    "gulp": "~3.9.1",
+    "electron-packager": "^8.7.2",
+    "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
-    "gulp-if": "^2.0.2",
-    "gulp-uglify": "^2.1.2",
-    "node-notifier": "^5.1.2",
-    "vinyl-source-stream": "^2.0.0"
+    "gulp-sourcemaps": "^2.6.4",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.10.0"
   },
   "dependencies": {
     "electron": "^1.7.5",
